Clean up, remove unnecessary content. Remove useless tags, avoid ugly wrapping, resize the city

--- a/css/cityr.css
+++ b/css/cityr.css
@@ -3,12 +3,17 @@
   height: 80px;
   position: relative;
   margin: 0 auto;
-  margin-top: -9px;
   perspective: 10000px;
   -webkit-perspective: 800px;
   -webkit-perspective-origin: -50% -240px;
 }
-.stage > svg {
+svg {
   width: 600px;
-  height: 600px;
+  height: 400px;
+}
+#btn-welcome {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  cursor: pointer;
+  white-space: nowrap;
 }
