--- a/stylus/shaper.styl
+++ b/stylus/shaper.styl
@@ -89,3 +89,12 @@
       left        -1px
       bottom      -2px
       right        1px
+
+
+.iso-legs
+  &:before
+    border-top    5px solid grey
+    border-bottom 5px solid grey
+  &:after
+    border-left   5px solid grey
+    border-right  5px solid grey
